--- a/project_dl/article/templates/animal.html
+++ b/project_dl/article/templates/animal.html
@@ -1,14 +1,12 @@
 
 {% extends 'main.html' %}
-<<<<<<< HEAD
 {% load staticfiles %}
-=======
-
->>>>>>> parent of 34c64c1... asd
-{% block article %}
-<h4>{{ article.article_date }}</h4>
-<h2>{{ article.article_title }}</h2>
-<p>{{ article.article_text }}</p>
+{% block animal %}
+<h4>The date of receipt: {{ animal.animal_date }}</h4>
+<h2>{{ animal.animal_name }}</h2>
+    <h3>{{ animal.animal_price }}</h3>
+    <h3>The brief description:</h3>
+<p>{{ animal.animal_desc }}</p>
 <hr>
     <div class="large-offset-1 large-8 columns">
 <p>Comments:</p>
@@ -16,7 +14,7 @@
     <p>{{ comment.comment_text }}</p>
 {% endfor %}
         {% if username %}
-        <form action="/articles/addcomment/{{ article.id }}/" method="post">
+        <form action="/articles/addcomment/{{ animal.id }}/" method="post">
             {%  csrf_token %}
             {{ form }}
             <input type="submit" class="button" value="Add comment">
