--- a/project_dl/templates/main.html
+++ b/project_dl/templates/main.html
@@ -13,25 +13,7 @@
     <div class="top-bar">
           <div class="top-bar-left">
             <ul class="menu">
-                <li><u><a href="/">DL</a></u></li>
-                {% if username %}
-                    <li><u style="text-decoration-color: #258faf;"><a href="/user/">Subjects</a></u></li>
-                    <li><u style="text-decoration-color: #258faf"><a href="/mail/">Mail</a></u></li>
-<<<<<<< HEAD
-=======
-                    <li><u style="text-decoration-color: #258faf"><a href="/questionary/">Questionary</a></u></li>
-                    <li><a href="/schedule/">Schedule</a></li>
->>>>>>> parent of 34c64c1... asd
-                {% endif %}
-            </ul>
-        </div>
-        <div class="top-bar">
-            <ul class="menu">
-                <form action="{%url 'search' %}" method="post">
-                          {% csrf_token %}
-                    <li><input type="text" name="search_field" value="" method='POST' placeholder="Search" ></li>
-                    <li><input class="button" type="submit" name="Search" value="Search"></li>
-                </form>
+                <li><u><a href="/"><img src="{% static "static/img/1.jpg" %}"  width="25px" height="25px" alt="logo"></a></u></li>
             </ul>
         </div>
         <div class="top-bar-right">
@@ -45,23 +27,14 @@
         </div>
     </div>
 
-    <div class="callout large primary">
-      <div class="row column text-center">
-        <h1><a href="/">IITU NEWS</a></h1>
-      </div>
-    </div>
-
     <div class="grid-container">
+    <h2>Zoo Store</h2>
         <div class="grid-x">
         <div class="small-1 columns"></div> <!— Для отступа слева —>
-            <div class="small-8 columns">{% block article %}{% endblock %}</div></div>
+
+            <div class="small-8 columns">{% block animal %}{% endblock %}</div></div>
     </div>
 <div class="grid-container">
-<<<<<<< HEAD
-=======
-{% block uploads %}{% endblock %}
-{% block questionary %}{% endblock %}
->>>>>>> parent of 34c64c1... asd
 {% block login %}{% endblock %}
 
 </div>
